lib/tests/fixtures/compiler/parser/illegal_alias_def.baseline
Error: illegal_alias_def.pp:2:5: type aliases can only be defined at top-level.
  type Foo = Integer
  ^~~~~~~~~~~~~~~~~~
