lib/tests/fixtures/compiler/parser/illegal_alias_def.pp
class foo {
    type Foo = Integer
}
